# AppUpdatingFramework

./: .editorconfig  .gitignore  .hgignore  CMakeLists.txt  conanfile.py  count_lines.bat  create_protected_dirs.bat  optimized libs.txt
src/core/: AppCollector.cpp  AppCollector.h  BoostFileSystemBugWorkaround.cpp  BoostFileSystemBugWorkaround.h  CMakeLists.txt  CancelCallback.h  DownloadUpdatesThread.cpp  DownloadUpdatesThread.h  Elevation.h  Elevation_msw.cpp  Elevation_msw.h  FileVersionInfo.cpp  FileVersionInfo.h  FileVersionInfo_msw.cpp  FileVersionInfo_msw.h  FindUpdatesThread.cpp  FindUpdatesThread.h  InstallUpdatesThread.cpp  InstallUpdatesThread.h  PlainTextVersionCollector.cpp  PlainTextVersionCollector.h  Process.h  ProcessBase.cpp  ProcessBase.h  Process_msw.cpp  Process_msw.h  ProductInstallationInfo.h  ProductUpdateDetails.cpp  ProductUpdateDetails.h  SearchMethod.h  StandardPaths.cpp  StandardPaths.h  StandardPaths_msw.cpp  UpdateInfoCollection.cpp  UpdateInfoCollection.h  UpdateInfoCollectorBase.cpp  UpdateInfoCollectorBase.h  VerifyUpdatesThread.cpp  VerifyUpdatesThread.h  Version.cpp  (+5 more)
src/core/job/: Job.cpp  Job.h  MoveFilesStep.cpp  MoveFilesStep.h  StartProgramStep.cpp  StartProgramStep.h  Step.cpp  Step.h  StepFactory.cpp  StepFactory.h  UnpackFilePackageStep.cpp  UnpackFilePackageStep.h  exceptions.h
src/core/package/: FilePackage.cpp  FilePackage.h  Package.cpp  Package.h  sinks.cpp  sinks.h  sources.cpp  sources.h
src/core/progress/: Product.cpp  Product.h  ProgressReader.cpp  ProgressReader.h  ProgressReaderWriter.cpp  ProgressReaderWriter.h  (+8 more)
(+135 files in other folders)
